realized main features